# SciParser_test

./: .env.example  .gitignore  .replit  PROGRESS.md  README.md  cleanup_architecture.py  migrate_skills.py  package-lock.json  package.json  planner_debug.txt  pyproject.toml  requirements.txt  test.py  test_out.py
Backend/: .env.example  .gitignore  README.md  alembic.ini  pyproject.toml  query_db_temp.py  requirements.txt  run.py  start.local.sh  start.sh  tools.json
Backend/alembic/: env.py
Backend/logs/: sciparser-log
Backend/src/: config.py  main.py
Backend/src/agents/: config.json  (+9 more)
Backend/temp_test_dir/: bounce-tracking-protection.sqlite  compatibility.ini  content-prefs.sqlite  cookies.sqlite  domain_to_categories.sqlite  extensions.json  f2612d55.sqlite-shm  favicons.sqlite-shm  key4.db  pkcs11.txt  places.sqlite-shm  prefs.js  sessionstore.jsonlz4  storage.sqlite  times.json  webappsstore.sqlite-shm  xulstore.json
Backend/tests/: conftest.py  start.sh  test_address_agent.py  test_address_obstacle_resume.py  test_admin_user_management.py  test_booking_agent.py  test_calculate_llm_cost.py  test_calendar_agent.py  test_captcha_learning.py  test_continue_interstitial.py  test_credential_override.py  test_credits.py  test_db_log_handler.py  test_llm_instrumentation.py  test_login_agent.py  test_memory_service.py  test_message_tool_calls_linkage.py  test_nav_cooldown.py  test_observer_verifier_recovery.py  test_observer_verifier_scale.py  test_obstacle_handler.py  test_schedule_tool_id_reconciliation.py  test_screenshot_leakage.py  test_session_cleanup.py  test_suspension_websocket_enforcement.py  test_tool_call_only_usage_logging.py
(+2493 files in other folders)
