[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "apscheduler>=3.11.3",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "browser-use>=0.13.1",
    "crewai>=0.193.2",
    "email-validator>=2.3.0",
    "fastapi>=0.138.1",
    "groq>=1.0.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.1.9",
    "langchain-openrouter>=0.2.4",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.6",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.61.0",
    "psutil>=7.2.2",
    "pydantic[email]>=2.12.5",
    "pyjwt>=2.13.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.51",
    "tavily>=1.1.0",
    "tavily-python>=0.7.26",
    "uvicorn>=0.49.0",
]
