[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "apscheduler>=3.11.2",
    "browser-use>=0.11.13",
    "browser-use-mcp-server>=1.0.3",
    "camoufox>=0.4.0",
    "fastapi>=0.136.3",
    "groq>=1.4.0",
    "langchain>=1.3.4",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openrouter>=0.2.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.4",
    "playwright>=1.60.0",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.50",
    "tavily>=1.1.0",
    "tavily-python>=0.7.25",
    "uvicorn>=0.49.0",
]
